fixed the alignment of online status bullet point

--- a/frontend/src/styles/profileInChat.css
+++ b/frontend/src/styles/profileInChat.css
@@ -50,8 +50,6 @@
 .online-user{
     color: rgb(0, 145, 0);
     font-size: 24px;
-    position: relative;
-    top: -3px;
 }
 
 .admin-text-style{
